--- a/Dockerfile_cfgoWidgets
+++ b/Dockerfile_cfgoWidgets
@@ -1,7 +1,10 @@
 FROM openanalytics/r-base
 
 # system libraries of general use
-RUN apt-get update
+RUN apt-get update && apt-get install -y \
+
+sudo \
+libcurl4-gnutls-dev
 
 ARG GITHUB_PAT
 ENV GITHUB_PAT $GITHUB_PAT
