remotes was missing

--- a/covr/Dockerfile
+++ b/covr/Dockerfile
@@ -2,6 +2,6 @@ FROM cfgo/gh-actions:base
 MAINTAINER "Thomas Fuchs" thomas.fuchs@cfgo.de
 
 # Install packages
-RUN R -e 'install_cran("covr")'
-RUN R -e 'install_cran("htmltools")'
-RUN R -e 'install_cran("DT")'
+RUN R -e 'remotes::install_cran("covr")'
+RUN R -e 'remotes::install_cran("htmltools")'
+RUN R -e 'remotes::install_cran("DT")'
