--- a/Templates/R-CMD-Windows.yml
+++ b/Templates/R-CMD-Windows.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {os: windows-latest, r: '3.6'}
+          - {os: windows-latest, r: ['3.6', '4.0']}
           #- {os: macOS-latest, r: '3.6'}
 
     env:
