--- a/Templates/lint.yml
+++ b/Templates/lint.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-18.04
     container: cfgo/gh-actions:base
     
+    env:	
+      GITHUB_PAT: ${{ secrets.GITHUB_PAT }}
+      
     steps:
       - uses: actions/checkout@v2
     
