--- a/Templates/R-CMD-Production.yml
+++ b/Templates/R-CMD-Production.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       
     env:	
-      GITHUB_PAT: ${{ secrets.GITHUB_PAT }}
+      GITHUB_PAT: ${{ secrets.GH_PAT }}
 
     steps:
       - uses: actions/checkout@v2
