--- a/Templates/lint.yml
+++ b/Templates/lint.yml
@@ -11,7 +11,7 @@ jobs:
     container: cfgo/gh-actions:base
     
     env:	
-      GITHUB_PAT: ${{ secrets.GITHUB_PAT }}
+      GITHUB_PAT: ${{ secrets.GH_PAT }}
       
     steps:
       - uses: actions/checkout@v2
